syntax = "proto3";

package rpc;

import "rpc/base.proto";

option java_package = "com.github.paopaoyue.mesh.dictionary_application.proto";
option java_outer_classname = "Dictionary";

message GetRequest {
  string key = 1;
}

message GetResponse {
  string key = 1;
  string value = 2;

  RespBase base = 255;
}

message AddRequest {
  string key = 1;
  string value = 2;
}

message AddResponse {
  string key = 1;

  RespBase base = 255;
}

message UpdateRequest {
  string key = 1;
  string value = 2;
}

message UpdateResponse {
  string key = 1;

  RespBase base = 255;
}

message RemoveRequest {
  string key = 1;
}

message RemoveResponse {
  string key = 1;

  RespBase base = 255;
}

enum ServiceStatusCode {
  SERVICE_OK = 0;

  KEY_DUPLICATE = 110001;
  KEY_NOT_FOUND = 110002;
}

service DictionaryService {
  rpc Get(GetRequest) returns(GetResponse);
  rpc Add(AddRequest) returns(AddResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
  rpc Remove(RemoveRequest) returns(RemoveResponse);
}
